--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/Dennis Ly/Desktop/Proyecto/Mundial-de-FutbolPOO/src/Libreria Proyecto/jcalendar-1.4.jar/jcalendar-1.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Dennis Ly/Desktop/Mundial-de-FutbolPOO/src/Libreria Proyecto/sqljdbc42.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
